<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.zahran.myapplication.signup">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_margin="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/circleimagesignup"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    app:civ_border_width="3dp"
                    app:civ_border_color="#f20d0d"
                    android:src="@drawable/nophoto"/>
            </RelativeLayout>
            <LinearLayout
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/user1"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:counterEnabled="true"
                    app:counterMaxLength="10">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/fname"
                        android:hint="@string/fname"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text"
                        />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/user"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:counterEnabled="true"
                    app:counterMaxLength="10">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/lname"
                    android:hint="@string/lname"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:errorEnabled="true">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_email_signup"
                    android:hint="@string/Email"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/pass_signup"
                android:hint="@string/pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:layout_margin="5dp"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_pass_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/repass_signup"
                android:hint="@string/repass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:layout_margin="5dp"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_repass_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    />
            </android.support.design.widget.TextInputLayout>
            <AutoCompleteTextView
                android:id="@+id/auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:completionThreshold="1"
                android:layout_margin="10dp"
                android:hint="select a country"
                android:completionHint="select country "/>
            <com.santalu.maskedittext.MaskEditText
                android:id="@+id/number"
                android:hint="@string/number"
                android:layout_margin="10dp"
                android:inputType="phone"
                app:met_mask="#### ### #### "
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <RadioGroup
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/tv_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/radiobutton1"
                    android:text="@string/RB1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/radiobutton2"
                    android:text="@string/RB2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RadioGroup>
            <Button
                android:id="@+id/btn_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:enabled="false"
                android:background="@drawable/my_button_bor"
                android:layout_gravity="center_horizontal"
                style="@style/Widget.Design.BottomNavigationView"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
